Des modifications sur des sorties de résultats dans les laboratoires

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,9 +4,11 @@ depends:
     ir
     commission
     health
+    health_lab
     account_invoice
 xml:
     z_health_extra.xml
     invoice.xml
+    z_health_extra_lab.xml
 
 
